--- a/pom.xml
+++ b/pom.xml
@@ -53,7 +53,11 @@
 			<artifactId>spring-boot-starter-batch</artifactId>
 		</dependency>
 
-	
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-jta-narayana</artifactId>
+		</dependency>
 	</dependencies>
 
 	<build>
