解决多datasource问题

--- a/src/main/resources/config/jdbc-r.properties
+++ b/src/main/resources/config/jdbc-r.properties
@@ -4,9 +4,9 @@
 #db.mybatis.type-handler-package=com.cml.springboot.framework.mybatis.typehandler
 
 
-db.mybatis.r.mapperLocations=classpath*:com/cml/springboot/sample/db/r/resource/*
-db.mybatis.r.typeAliasesPackage=com.cml.springboot.sample.bean
-db.mybatis.r.typeHandlerPackage=com.cml.springboot.framework.mybatis.typehandler
+db.mybatis.r.mapperLocations=classpath*:com/cml/learning/db/r/resource/*
+db.mybatis.r.typeAliasesPackage=com.cml.learning.db.beans
+db.mybatis.r.typeHandlerPackage=com.cml.learning.mybatis.typehandler
 
 db.mybatis.r.jdbc.driverClassName=com.mysql.jdbc.Driver
 db.mybatis.r.jdbc.url=jdbc:mysql://localhost/springboot_r?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
