--- a/src/main/resources/config/jdbc-rw.properties
+++ b/src/main/resources/config/jdbc-rw.properties
@@ -4,9 +4,9 @@
 #db.mybatis.type-handler-package=com.cml.springboot.framework.mybatis.typehandler
 
 
-db.mybatis.rw.mapperLocations=classpath*:com/cml/springboot/sample/db/rw/resource/*
-db.mybatis.rw.typeAliasesPackage=com.cml.springboot.sample.bean
-db.mybatis.rw.typeHandlerPackage=com.cml.springboot.framework.mybatis.typehandler
+db.mybatis.rw.mapperLocations=classpath*:com/cml/learning/db/rw/resource/*
+db.mybatis.rw.typeAliasesPackage=com.cml.learning.db.beans
+db.mybatis.rw.typeHandlerPackage=com.cml.learning.mybatis.typehandler
 
 db.mybatis.rw.jdbc.driverClassName=com.mysql.jdbc.Driver
 db.mybatis.rw.jdbc.url=jdbc:mysql://localhost/springboot?characterEncoding=utf8&zeroDateTimeBehavior=convertToNull
