--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,16 @@
 			<artifactId>spring-boot-starter-batch</artifactId>
 		</dependency>
 
+		<dependency>
+			<groupId>bsf</groupId>
+			<artifactId>bsf</artifactId>
+			<version>2.4.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.igniterealtime.smack</groupId>
+			<artifactId>smack-extensions</artifactId>
+			<version>4.1.7</version>
+		</dependency>
 	</dependencies>
 
 	<build>
