去除非必须代码，优化reader writer ，添加jobparam

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
 spring.batch.initializer.enabled=true
 spring.batch.job.enabled=true
-spring.datasource.continue-on-error=true
 spring.batch.job.names=secondJob
+#spring.batch.schema=classpath:org/springframework/batch/core/schema-hsqldb.sql
