优化basemodule，去除mybatis每个module下的beans配置参数，改成模块名下的beans

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@
 #spring.batch.job.enabled=true
 #spring.batch.job.names=secondJob
 #spring.batch.schema=classpath:org/springframework/batch/core/schema-hsqldb.sql
+#logging.config=classpath:logback-boot.xml \u6307\u5b9alog\u6587\u4ef6\u76ee\u5f55
